# maestor

./: .gitignore  CMakeLists.txt  README  README.md  howtoInstall.txt  leftTodo.txt  manifest.xml  package.xml  setupMaestor.sh
config/: config.txt
console/: console.py  maestorapi.py
docs/: Maestor.tex
include/: ArmMetaJoint.h  ArmWristXYZ.h  BalanceController.h  CommHandler.h  CommandChannel.h  FTSensorBoard.h  HuboMotor.h  HuboState.h  IMUBoard.h  Interpolable.h  Interpolation.h  LowerBodyLeg.h  MetaJoint.h  MetaJointController.h  MotorBoard.h  Names.h  NeckRollPitch.h  PowerControlBoard.h  ReferenceChannel.h  RobotComponent.h  RobotControl.h  Scheduler.h  SimChannels.h  Singleton.h  StateChannel.h  TrajHandler.h  Trajectory.h  WSVFile.h  loop.h  pugixml.hpp  servTest.h
install/: install-all.sh  install-fuerte.sh  install-hubo-ach.sh  install-maestor.sh  install-openHubo.sh  install-openrave.sh  install-ros-fuerte.sh  install.sh
install/uninstall/: uninstall.sh
lib/: Maestor.py
models/: hubo_default.xml
run/: console.sh  kill-maestor.sh  maestor  real.sh  sim-real.sh  sim.sh
scripts/: JointMiror.py  Maestor.py  Walk.py  getSensorInfo.py  getZMP.py  maestorapi.py  oneLegBalance.py  testure.py  walk.py  walkforward.py
scripts/demo/: LeftArmUp.py  arms.py  attention.py  crouch.py  dance.py  no.py  robot.py  wave.py  yes.py
scripts/simpleDemos/: BigClap.py  ChickenDance.py  GolfClap.py  WatchCrowd.py  WaxOnWaxOff.py
src/: ArmMetaJoint.cpp  ArmWristXYZ.cpp  BalanceController.cpp  CommHandler.cpp  CommandChannel.cpp  FTSensorBoard.cpp  HuboMotor.cpp  HuboState.cpp  IMUBoard.cpp  Interpolable.cpp  Interpolation.cpp  LowerBodyLeg.cpp  MetaJoint.cpp  MetaJointController.cpp  MotorBoard.cpp  Names.cpp  NeckRollPitch.cpp  PowerControlBoard.cpp  ReferenceChannel.cpp  RobotComponent.cpp  RobotControl.cpp  Scheduler.cpp  SimChannels.cpp  StateChannel.cpp  TrajHandler.cpp  Trajectory.cpp  WSVFile.cpp  loop.cpp  package.xml  pugixml.cpp  servTest.cpp  utils.sh
src/config/: config.txt
src/include/: ArmMetaJoint.h  BalanceController.h  IMUBoard.h  Interpolable.h  LowerBodyLeg.h  RobotComponent.h  loop.h
src/install/: install-hubo-ach.sh  install-maestor.sh  install-openHubo.sh
src/install/uninstall/: hubo-ach-clean-all.sh
src/maestor/srv/: __init__.py  _fib.py
src/scripts/demo/: RightArmUp.py  wave.py
src/src/: CMakeLists.txt  HuboMotor.cpp  HuboState.cpp  MotorBoard.cpp  ReferenceChannel.cpp  loop.cpp  mainpage.dox  servTest.cpp
src/src/console/: console.py
src/src/include/: CommandChannel.h  ReferenceChannel.h  Scheduler.h  TrajHandler.h  servTest.h
src/src/install/: install-all.sh  update-pythonpath.sh
src/src/scripts/: Walk.py  getSensorInfo.py  powerMovements.py
src/src/scripts/demo/: arms.py  dance.py
src/src/src/: BalanceController.cpp  RobotControl.cpp
src/src/srv/: initRobot.srv  setTrigger.srv
src/srv/: getProperties.srv  setProperties.srv
srv/: command.srv  extendTrajectory.srv  fib.srv  ignoreFrom.srv  loadTrajectory.srv  requiresMotion.srv  setProperty.srv
